--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<title>Customized travel Itineraries to India</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="main.css" />
 	</head>
 	<body>
 
@@ -24,7 +24,7 @@
 				<ul class="links">
 					<li><a href="index.html">Home</a></li>
 					<li><a href="how-it-works.html">How it works</a></li>
-					<li><a href="startitinerary.html">Begin Planning</a></li>
+					<li><a href="index1.html">Begin Planning</a></li>
 					<li><a href="elements.html">Elements</a></li>
 				</ul>
 			</nav>
@@ -164,12 +164,12 @@
 			</footer>
 
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+			<script src="jquery.min.js"></script>
+			<script src="jquery.scrolly.min.js"></script>
+			<script src="jquery.scrollex.min.js"></script>
+			<script src="skel.min.js"></script>
+			<script src="util.js"></script>
+			<script src="main.js"></script>
 
 	</body>
 </html>
