--- a/index1.html
+++ b/index1.html
@@ -36,7 +36,7 @@
   
   .selectBox select {
     width: 100%;
-    font-weight: bold;
+    font-weight: ;
   }
   
   .overSelect {
@@ -297,16 +297,16 @@
                         <option>Hills</option>
                         <option>Historical places</option>
                         <option>Wild life</option>
-                        </select> -->
-                        <label  for="exampleFormControlSelect2">If this is too much select standard tourist places, if you wish soo.</label>
+                        </select> 
+                        <label  for="exampleFormControlSelect2">If this is too much select standard tourist places, if you wish soo.</label> -->
                     </div>
                 <!--    <h3 class="padding">Thank you this is all the information we need to prepare your itinerary, Please expect an email from us within 3 days.
                         Add itinerary.mysite.com to your email whitelist.
                         Please submit the form now.</h3> -->
                     <div> 
                         
-                        <button type="button" class="btn btn-outline-light">Submit</button>
-                        <button type="reset" class="btn btn-outline-light">Reset Form </button>
+                        <button type="button" class="btn btn-primary button">Submit</button>
+                        <button type="reset" class="btn btn-primary">Reset Form </button>
                     </div>
 
                     <!-- <div class="form-group">
